@@ -14,7 +14,6 @@ DESIGN
 - is there a maximum amount of solute that the shaker can dispense?
 
 HIGH
-- fix dropper button, doesn't disable when beaker is full
 - move shaker location to holes in shaker image
 - move developer display to a dialog, add a button to access
 - view of solute exiting shaker
@@ -24,6 +23,7 @@ MEDIUM
 - get dropper assets from NP
 - adjust drag bounds for shaker and dropper
 - make precipitate particles sit precisely on bottom of beaker
+- if we have limits on amount of solute, then make sure that we don't add solvent volume that would exceed the solute limit
 
 LOW
 - #3199, bigger slider thumb on FaucetNode
