@@ -1,3 +1,5 @@
+12/26/11 a little work on add/removeSolvent and add/removeSolute in model
+12/26/11 fix dropper button, doesn't disable when beaker is full
 12/26/11 move origin of dropper to hole that dispenses stock solution
 12/26/11 replace ImmutableVector2D with Point2D for non-public fields
 12/26/11 first pass at stock solution coming out of dropper (not aligned with dropper hole)
